copy stuff from 1.20.4, still wip